--- a/Raven.Studio.Html5/Raven.Studio.Html5.csproj
+++ b/Raven.Studio.Html5/Raven.Studio.Html5.csproj
@@ -61,6 +61,7 @@
     <TypeScriptCompile Include="App\commands\filesystem\getConfigurationsByPrefixCommand.ts" />
     <TypeScriptCompile Include="App\commands\filesystem\getFoldersStartsWithCommand.ts" />
     <TypeScriptCompile Include="App\commands\filesystem\resolveConflictsCommand.ts" />
+    <TypeScriptCompile Include="App\commands\filesystem\resetSynchronizationCommand.ts" />
     <TypeScriptCompile Include="App\commands\resources\getReducedDatabaseStatsCommand.ts" />
     <TypeScriptCompile Include="App\commands\resources\getResourceDrives.ts" />
     <TypeScriptCompile Include="App\commands\resources\getGlobalReplicationTopology.ts" />
