--- a/src/Raven.Client/Raven.Client.csproj
+++ b/src/Raven.Client/Raven.Client.csproj
@@ -44,16 +44,16 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Lambda2Js.Signed" Version="3.1.0" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.5.0-rc1" />
-    <PackageReference Include="System.Buffers" Version="4.5.0-rc1" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0-rtm-26516-03" />
+    <PackageReference Include="System.Buffers" Version="4.5.0-rtm-26516-03" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Raven.CodeAnalysis" Version="1.0.10">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.0-rc1" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.0-rtm-26516-03" />
     <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
-    <PackageReference Include="System.Security.Cryptography.Cng" Version="4.5.0-rc1" />
-    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.0-rc1" />
+    <PackageReference Include="System.Security.Cryptography.Cng" Version="4.5.0-rtm-26516-03" />
+    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.0-rtm-26516-03" />
   </ItemGroup>
   <ItemGroup Condition="$(TargetFramework) == 'netstandard1.3'">
     <PackageReference Include="System.Diagnostics.Contracts" Version="4.3.0" />
@@ -66,10 +66,10 @@
     <PackageReference Include="System.Net.WebSockets" Version="4.3.0" />
     <PackageReference Include="System.Net.WebSockets.Client" Version="4.3.2" />
     <PackageReference Include="System.Reflection.Extensions" Version="4.3.0" />
-    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.5.0-rc1" />
+    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.5.0-rtm-26516-03" />
     <PackageReference Include="System.Threading" Version="4.3.0" />
     <PackageReference Include="System.Threading.Thread" Version="4.3.0" />
     <PackageReference Include="System.Threading.ThreadPool" Version="4.3.0" />
-    <PackageReference Include="System.ValueTuple" Version="4.5.0-rc1" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0-rtm-26516-03" />
   </ItemGroup>
 </Project>
