--- a/NuGet.Config
+++ b/NuGet.Config
@@ -4,10 +4,10 @@
     <!--To inherit the global NuGet package sources remove the <clear/> line below -->
     <clear />
     <add key="project" value="libs" />
-    <add key="xunit" value="https://www.myget.org/F/xunit/api/v3/index.json" />
-    <add key="dotnet-buildtools" value="https://dotnet.myget.org/F/dotnet-buildtools/api/v3/index.json" />
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="dotnet-core" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
+    <add key="xunit" value="https://www.myget.org/F/xunit/api/v3/index.json" />
+    <add key="dotnet-final" value="https://dotnetfeed.blob.core.windows.net/orchestrated-release-2-1/20180515-07/final/index.json" />
+    <add key="dotnet-buildtools" value="https://dotnet.myget.org/F/dotnet-buildtools/api/v3/index.json" />
     <add key="Esprima" value="https://www.myget.org/F/esprimadotnet/api/v3/index.json" />
   </packageSources>
 </configuration>
