--- a/src/Raven.Server/Raven.Server.csproj
+++ b/src/Raven.Server/Raven.Server.csproj
@@ -3,7 +3,7 @@
     <Description>Raven.Server is the database server for RavenDB</Description>
     <Authors>Hibernating Rhinos</Authors>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RuntimeFrameworkVersion>2.1.0-rtm-26516-03</RuntimeFrameworkVersion>
+    <RuntimeFrameworkVersion>2.1.0</RuntimeFrameworkVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <AssemblyName>Raven.Server</AssemblyName>
     <OutputType>Exe</OutputType>
@@ -66,23 +66,23 @@
     <PackageReference Include="Lextm.SharpSnmpLib" Version="10.0.6" />
     <PackageReference Include="Lucene.Net" Version="3.0.13" />
     <PackageReference Include="Lucene.Net.Contrib.Spatial.NTS" Version="3.0.13" />
-    <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.1.0-rtm-30796" />
-    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.1.0-rtm-30796" />
-    <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.1.0-rtm-30796" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.8.0-beta4" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.8.0-beta4" />
+    <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.1.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.8.2" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.8.2" />
     <PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.1.0-rtm-30796" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.1.0-rtm-30796" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.0-rtm-30796" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.0" />
     <PackageReference Include="NCrontab.Advanced" Version="1.3.11" />
     <PackageReference Include="Npgsql" Version="3.2.7" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.8.2" />
     <PackageReference Include="Raven.CodeAnalysis" Version="1.0.10">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="System.Data.SqlClient" Version="4.5.0-rtm-26516-03" />
-    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="4.5.0-rtm-26516-03" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.5.0" />
+    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Documents\Indexes\IndexMerging" />
