--- a/src/Raven.Server/Raven.Server.csproj
+++ b/src/Raven.Server/Raven.Server.csproj
@@ -76,6 +76,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.0" />
     <PackageReference Include="MySql.Data" Version="6.10.7" />
+    <PackageReference Include="MySql.Data" Version="8.0.11" />
     <PackageReference Include="NCrontab.Advanced" Version="1.3.11" />
     <PackageReference Include="Npgsql" Version="4.0.0" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.8.2" />
