--- a/src/Raven.Server/Raven.Server.csproj
+++ b/src/Raven.Server/Raven.Server.csproj
@@ -79,6 +79,7 @@
     <PackageReference Include="MySql.Data" Version="8.0.11" />
     <PackageReference Include="NCrontab.Advanced" Version="1.3.11" />
     <PackageReference Include="Npgsql" Version="4.0.0" />
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.12.0-beta2" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.8.2" />
     <PackageReference Include="Raven.CodeAnalysis" Version="1.0.10">
       <PrivateAssets>All</PrivateAssets>
