RavenDB-11320, RavenDB-11328 update docker scripts for ubuntu 18.04; prepare for 4.1 nightlies

--- a/docker/ravendb-ubuntu/Dockerfile
+++ b/docker/ravendb-ubuntu/Dockerfile
@@ -1,9 +1,8 @@
-FROM ubuntu:16.04
-
+FROM ubuntu:18.04
 
 RUN apt-get update \
     && apt-get install -y \
-    && apt-get install --no-install-recommends curl bzip2 libunwind8 libicu55 libcurl3 ca-certificates jq -y
+    && apt-get install --no-install-recommends libssl1.0.0 bzip2 libunwind8 libicu60 libcurl3 ca-certificates jq -y
 
 ENV RAVEN_ARGS='' RAVEN_SETTINGS='' RAVEN_Setup_Mode='Initial' RAVEN_DataDir='RavenData' RAVEN_ServerUrl_Tcp='38888' RAVEN_AUTO_INSTALL_CA='true' RAVEN_IN_DOCKER='true'
 
