--- a/src/Raven.Embedded/Raven.Embedded.csproj
+++ b/src/Raven.Embedded/Raven.Embedded.csproj
@@ -3,18 +3,18 @@
   <PropertyGroup>
     <Description>RavenDB Embedded library to run ravendb in embedded way</Description>
     <Authors>Hibernating Rhinos</Authors>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RuntimeFrameworkVersion>2.0.7</RuntimeFrameworkVersion>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <OutputType>Library</OutputType>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <AssemblyName>Raven.Embedded</AssemblyName>
-    <PackageId>RavenEmbedded</PackageId>
+    <PackageId>RavenDB.Embedded</PackageId>
     <PackageTags>embedded;database;nosql;doc db</PackageTags>
     <Configurations>Debug;Release;Validate</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RavenDB.Client" Version="4.0.5" />
+    <ProjectReference Include="..\Raven.Client\Raven.Client.csproj" />
+    <ProjectReference Include="..\Sparrow\Sparrow.csproj" />
   </ItemGroup>
 
 </Project>
