RavenDB-7787 - Adding Cancellation Token, better naming, fixed target FX version used

--- a/src/Raven.Embedded/Raven.Embedded.csproj
+++ b/src/Raven.Embedded/Raven.Embedded.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Description>RavenDB Embedded library to run ravendb in embedded way</Description>
     <Authors>Hibernating Rhinos</Authors>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <OutputType>Library</OutputType>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <AssemblyName>Raven.Embedded</AssemblyName>
