--- a/src/Raven.TestDriver/Raven.TestDriver.csproj
+++ b/src/Raven.TestDriver/Raven.TestDriver.csproj
@@ -5,7 +5,7 @@
     <Title>RavenDB TestDriver</Title>
     <Product>RavenDB TestDriver</Product>
     <Authors>Hibernating Rhinos</Authors>
-    <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard1.3;netstandard2.0;net461</TargetFrameworks>
     <AssemblyName>Raven.TestDriver</AssemblyName>
     <PackageId>RavenDB.TestDriver</PackageId>
     <PackageTags>ravendb;client;database;nosql;doc db</PackageTags>
@@ -28,6 +28,10 @@
   
   <ItemGroup Condition="$(TargetFramework) == 'netstandard1.3'">
     <PackageReference Include="System.AppDomain" Version="2.0.11" />
+  </ItemGroup>
+  
+  <ItemGroup Condition="$(TargetFramework) == 'netstandard2.0'">
+    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
