RavenDB-11402 escape custom config path

--- a/src/Raven.TestDriver/Raven.TestDriver.csproj
+++ b/src/Raven.TestDriver/Raven.TestDriver.csproj
@@ -26,6 +26,15 @@
     <ProjectReference Include="..\Raven.Client\Raven.Client.csproj" />
   </ItemGroup>
   
+
+  <ItemGroup>
+    <ProjectReference Include="..\Sparrow\Sparrow.csproj" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup Condition="$(TargetFramework) == 'netstandard1.3'">
+    <PackageReference Include="System.AppDomain" Version="2.0.11" />
+  </ItemGroup>
+
   <ItemGroup Condition="$(TargetFramework) == 'netstandard2.0'">
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
