RavenDB-8733 Raven.TestDriver should be using Raven.Embedded

--- a/src/Raven.TestDriver/Raven.TestDriver.csproj
+++ b/src/Raven.TestDriver/Raven.TestDriver.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Raven.Client\Raven.Client.csproj" />
+    <ProjectReference Include="..\Raven.Embedded\Raven.Embedded.csproj" />
   </ItemGroup>
   
 
