RavenDB-8733 override NuGet defaults which prevented contentFiles to be copied

--- a/src/Raven.TestDriver/Raven.TestDriver.csproj
+++ b/src/Raven.TestDriver/Raven.TestDriver.csproj
@@ -29,7 +29,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Raven.Embedded\Raven.Embedded.csproj" />
+    <ProjectReference Include="..\Raven.Embedded\Raven.Embedded.csproj">
+      <PrivateAssets>analyzers;build</PrivateAssets>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
