Making autoincremented "id" column of "pages" table to be long (JET_coltyp.Currency) instead of int32 (JET_coltyp.Long) to avoid possible "Auto-increment counter has reached maximum value" esent error

--- a/Raven.Database/Raven.Database.csproj
+++ b/Raven.Database/Raven.Database.csproj
@@ -288,6 +288,7 @@
     <Compile Include="DocumentConflictResolver.cs" />
     <Compile Include="FileSystem\Controllers\BaseAdminFileSystemApiController.cs" />
     <Compile Include="FileSystem\Controllers\SynchronizationTopologyController.cs" />
+    <Compile Include="FileSystem\Storage\Esent\Schema\Updates\From08To09.cs" />
     <Compile Include="FileSystem\Storage\Esent\Schema\Updates\From07To08.cs" />
     <Compile Include="FileSystem\Synchronization\SynchronizationTopologyNode.cs" />
     <Compile Include="FileSystem\Synchronization\SynchronizationTopologyDiscoverer.cs" />
