RavenDB-11663 fixing an issue where deletes of documents with long ids with Esent storage won't get replicated if they have similar prefix

--- a/Raven.Database/Raven.Database.csproj
+++ b/Raven.Database/Raven.Database.csproj
@@ -568,6 +568,7 @@
     <Compile Include="Storage\Esent\SchemaUpdates\Updates\From52To53.cs" />
     <Compile Include="Storage\Esent\SchemaUpdates\Updates\From51To52.cs" />
     <Compile Include="Storage\Esent\SchemaUpdates\Updates\From50To51.cs" />
+    <Compile Include="Storage\Esent\SchemaUpdates\Updates\From54To55.cs" />
     <Compile Include="Storage\Esent\StorageConfigurator.cs" />
     <Compile Include="Storage\IncrementalBackupState.cs" />
     <Compile Include="Storage\RemainingReductionPerLevel.cs" />
