RavenDB-11415 fix cluster transactions

--- a/src/Raven.Server/Properties/launchSettings.json
+++ b/src/Raven.Server/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Raven.Server": {
       "commandName": "Project",
-      "commandLineArgs": "--Security.UnsecuredAccessAllowed=\"PublicNetwork\""
+      "commandLineArgs": "--Security.UnsecuredAccessAllowed=\"PublicNetwork\" --Features.Availability=\"Experimental\""
     }
   }
 }
