RavenDB-11605 - add build version to the output of the smuggler file

--- a/tools/Raven.Migrator/Raven.Migrator.csproj
+++ b/tools/Raven.Migrator/Raven.Migrator.csproj
@@ -9,7 +9,9 @@
   </PropertyGroup>
   
   <ItemGroup>
-     <Compile Include="..\..\src\CommonAssemblyInfo.cs" Link="Properties\CommonAssemblyInfo.cs" />
+    <Compile Include="..\..\src\CommonAssemblyInfo.cs" Link="Properties\CommonAssemblyInfo.cs" />
+    <Compile Include="..\..\src\Raven.Client\Properties\VersionInfo.cs" Link="Properties\VersionInfo.cs" />
+    <Compile Include="..\..\src\Raven.Client\Extensions\StringExtensions.cs" Link="Extensions\StringExtensions.cs" />
   </ItemGroup>
 
   <ItemGroup>
