--- a/bench/SubscriptionFailover.Benchmark/SubscriptionFailover.Benchmark.csproj
+++ b/bench/SubscriptionFailover.Benchmark/SubscriptionFailover.Benchmark.csproj
@@ -1,16 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RuntimeFrameworkVersion>2.1.2</RuntimeFrameworkVersion>
+    <RuntimeFrameworkVersion>2.1.3</RuntimeFrameworkVersion>
     <CodeAnalysisRuleSet>..\..\RavenDB.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\src\Raven.Server\Raven.Server.csproj" />
     <ProjectReference Include="..\..\test\FastTests\FastTests.csproj" />
     <ProjectReference Include="..\..\test\Tests.Infrastructure\Tests.Infrastructure.csproj" />
   </ItemGroup>
-
 </Project>
